--- a/locales/ka.json
+++ b/locales/ka.json
@@ -128,6 +128,7 @@
   "titles": {
     "FlatPageTitleGinger": "რემონტი ჯინჯერი",
     "IAmLookingFor": "მე ვეძებ ბინას",
+    "ChooseSearchOption": "არიჩიეთ ძებნის მეთოდი",
     "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
     "FillInPhoneNumber": "მიუთითე ტელეფონის ნომერი",
     "FillInPhoneNumberSubTitle": "მიუთითე ნომერი, რომელიც უკვე რეგისტრირებულია",
