Added filter flow

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -4,6 +4,11 @@
     "sales": "გაყიდვების აპლიკაცია",
     "model": "მაკეტის აპლიკაცია"
   },
+  "status": {
+    "finished": "დასრულებული",
+    "planned": "დაგეგმილი",
+    "ongoing": "მიმდინარე"
+  },
   "languages": {
     "ka": "ქარ",
     "en": "ENG"
@@ -27,6 +32,7 @@
     "IAmLookingFor": "მე ვეძებ",
     "bedrooms": "საძინებლები",
     "project": "პროექტი",
+    "projects": "პროექტები",
     "BuildingStatus": "მშენებლობის სტატუსი"
   },
   "sidebar": {
@@ -128,9 +134,14 @@
   "titles": {
     "FlatPageTitleGinger": "რემონტი ჯინჯერი",
     "IAmLookingFor": "მე ვეძებ ბინას",
+    "ChooseBedroomCount": "აირჩიეთ საძინებლების რაოდენობა",
+    "ChooseFlatType": "აირჩიეთ ბინის ტიპი",
     "ChooseSearchOption": "არიჩიეთ ძებნის მეთოდი",
     "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
     "FillInPhoneNumber": "მიუთითე ტელეფონის ნომერი",
+    "BuildingProgress": "მშენებლობის სტატუსი",
+    "PickFloorRange": "არიჩიეთ სართულების დიაპაზონი",
+    "PickPriceRange": "არიჩიეთ ფასების დიაპაზონი",
     "FillInPhoneNumberSubTitle": "მიუთითე ნომერი, რომელიც უკვე რეგისტრირებულია",
     "FlatPageTitleMuscat": "რემონტი მუსკატი",
     "YouWillRecieveCode": "კოდს მიიღებთ ტელეფონის ნომერზე",
@@ -141,7 +152,10 @@
     "SearchByFlatNumber": "ბინის ნომრით ძებნა",
     "YourChosenFlat": "შენს მიერ შერჩეული ბინა",
     "ByFlatNumberButtonsTitle": "ან გააგრძელე ძებნა შემდეგი მეთოდებით",
-    "YouCanSelectMultipe": "შეგიძლიათ აანთოთ რამოდენიმე",
+    "YouCanSelectMultipe": "შეგიძლიათ აირჩიოთ რამოდენიმე",
+    "YouCanSelectOnlyOne": "შეგიძლიათ აირჩიოთ მხოლოდ ერთი",
+    "ChooseProject": "აირჩიეთ პროქტი",
+    "ChooseProjects": "აირჩიეთ პროექტები",
     "SearchByFlatNumberSubTitle": "ჩაწერეთ თქვენს მიერ შერჩეული ბინის ნომერი",
     "flat-list-result-title": "თქვენს მიერ არჩეული კრიტერიუმების მიხედვით <br><span class=\"color-orange\">მოიძებნა %s ბინა</span>",
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
@@ -156,7 +170,14 @@
     "balcony": "ვერანდა",
     "kitchen": "სამზარეულო",
     "bathroom": "სააბაზანო",
-    "wc": "სააბაზანო"
+    "wc": "სააბაზანო",
+    "Studio": "სტუდიოს ტიპის",
+    "KitchenDetached": "ცალკე სამზარეულო",
+    "NoBedroom": "საძინებლის გარეშე",
+    "OneBedroom": "ერთი საძინებელი",
+    "TwoBedrooms": "ორი საძინებელი",
+    "ThreeBedrooms": "სამი საძინებელი",
+    "FourBedrooms": "ოთხი საძინებელი"
   },
   "addresses": {
     "marshal_gelovani": "მარშალ გელოვანის გამზირი",
