Customize flat index page

--- a/locales/en.json
+++ b/locales/en.json
@@ -81,6 +81,7 @@
     "Supply": "Supply",
     "Render": "Render",
     "Plan": "Plan",
+    "FloorPlan": "Floor Plan",
     "appliances": "Appliances",
     "furniture": "Furniture",
     "bedrooms": "Bedrooms",
