--- a/locales/ka.json
+++ b/locales/ka.json
@@ -102,6 +102,7 @@
     "Supply": "ტექნიკა",
     "Render": "რენდერი",
     "Plan": "ნახაზი",
+    "FloorPlan": "სართულის გეგმა",
     "appliances": "ტექნიკა",
     "furniture": "ავეჯი",
     "flat": "ბინა",
