added listing page and inline filter navigation

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -55,6 +55,7 @@
     "EndSession": "სესიის დასრულება",
     "authorize": "ავტორიზაცია",
     "faq": "ხშირად დასმული კითხვები",
+    "select": "არჩევა",
     "CLOSE": "დახურვა",
     "register": "რეგისტრაცია",
     "see": "ნახე",
@@ -137,8 +138,10 @@
     "IAmLookingFor": "მე ვეძებ ბინას",
     "ChooseBedroomCount": "აირჩიეთ საძინებლების რაოდენობა",
     "ChooseFlatType": "აირჩიეთ ბინის ტიპი",
+    "SearchResults": "ძებნის შედეგები",
     "ChooseSearchOption": "არიჩიეთ ძებნის მეთოდი",
     "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
+    "FlatCardSubTitle": "ბინის საერთო ფართი %s² მეტრი",
     "FillInPhoneNumber": "მიუთითე ტელეფონის ნომერი",
     "BuildingProgress": "მშენებლობის სტატუსი",
     "PickFloorRange": "არიჩიეთ სართულების დიაპაზონი",
