Create layout for flat pages. Display summon sales and view flat from colored tablet space

--- a/locales/en.json
+++ b/locales/en.json
@@ -105,7 +105,8 @@
     "ByPhoneNumber": "Authorisation by phone number",
     "FlatsLeftInThisBlock": "Flats left in this block",
     "ByFlatNumber": "Search by flat number",
-    "ByFilter": "Search by filter"
+    "ByFilter": "Search by filter",
+    "callSaleManager": "Call the sales manager and book that flat"
   },
   "titles": {
     "FlatPageTitleGinger": "Design ginger",
