Feat: Save flat

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -132,7 +132,8 @@
     "ByPhoneNumber": "ავტორიზაცია ტელეფონის ნომრით",
     "ByFlatNumber": "ბინის ნომრით ძებნა",
     "ByFilter": "ფილტრით ძებნა",
-    "callSaleManager": "გამოიძახე გაყიდვების მენეჯერი და დაჯავშნე ეს ბინა"
+    "callSaleManager": "გამოიძახე გაყიდვების მენეჯერი და დაჯავშნე ეს ბინა",
+    "saveFlat": "შეინახე ეს ბინა"
   },
   "titles": {
     "FlatPageTitleGinger": "რემონტი ჯინჯერი",
