--- a/locales/en.json
+++ b/locales/en.json
@@ -106,7 +106,8 @@
     "FlatsLeftInThisBlock": "Flats left in this block",
     "ByFlatNumber": "Search by flat number",
     "ByFilter": "Search by filter",
-    "callSaleManager": "Call the sales manager and book that flat"
+    "callSaleManager": "Call the sales manager and book this flat",
+    "saveFlat": "Save this flat"
   },
   "titles": {
     "FlatPageTitleGinger": "Design ginger",
