started render flow

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -4,6 +4,9 @@
     "sales": "გაყიდვების აპლიკაცია",
     "model": "მაკეტის აპლიკაცია"
   },
+  "projects": {
+    "m3_gelovani": "m³ გელოვანზე"
+  },
   "status": {
     "finished": "დასრულებული",
     "planned": "დაგეგმილი",
@@ -26,6 +29,7 @@
     "decoration": "დეკორი",
     "appliance": "ტექნიკა",
     "block": "ბლოკი",
+    "floorPlan": "სართულის გეგმა",
     "price": "ფასი",
     "floor": "სართულები",
     "view": "ხედი",
