created success page, and added legend on floor render page

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -70,6 +70,15 @@
   "labels": {
     "FullArea": "სრული ფართი",
     "FlatArea": "ბინის ფართი",
+    "sold": "გაყიდული",
+    "available": "დარჩენილია",
+    "reserved": "შერჩეულია",
+    "YouCalledForSales": "თქვენ გამოიძახეთ გაყიდვები",
+    "YouAreNumber": "რიგში ხართ მე %s",
+    "ApproximateWaitingTime": "სავარაუდო ლოდინის დრო %s წუთი",
+    "DetailsAsPdf": "დეტალები PDF ვერსიად",
+    "CancelSalesRequest": "გაყიდვების გაუქმება",
+    "WaitForSalesOrRequestInfo": "დაელოდეთ სეილებს ან მოითხოვე დეტალები მეილზე",
     "name": "სახელი და გვარი",
     "phone": "ტელეფონის ნომერი",
     "SendCodeAgain": "ახლიდან გაგზავნა",
