Sales With inline filter

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -57,6 +57,7 @@
   },
   "buttons": {
     "next": "შემდეგი",
+    "Sales": "გაყიდვები",
     "GetCode": "კოდის მიღება",
     "EndSession": "სესიის დასრულება",
     "authorize": "ავტორიზაცია",
