Feat: Open save flat modal before user leaves the flat page

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -183,7 +183,8 @@
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
     "ModelIndexPage": "ბინის შერჩევა იწყება აქ!",
     "FlatPagesTitle": "აირჩიე შენთვის სასურველი %s",
-    "appliancesPageSubtitle": "მონიშნე სასურველი ერთი ფერი"
+    "appliancesPageSubtitle": "მონიშნე სასურველი ერთი ფერი",
+    "flatPagesModal": "გსურთ ამ ბინის შენახვა?"
   },
   "rooms": {
     "Hall": "ჰოლი",
@@ -209,7 +210,8 @@
   },
   "descriptions": {
     "ModelIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
-    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო."
+    "ModelMainIndexPage": "შენთვის სასურველი ბინის შესარჩევად მიჰყევი აპლიკაციის ნავიგაციას.<br><br>თქვენს წინაშეა m²-ის ახალი უბანი m³ საბურთალო. ბინის შერჩევის პროცესის გასამარტივებლად, ფილტრების გამოყენებით თქვენ შეძლებთ სასურველი ბინის შერჩევას.<br><br>იპოვეთ თქვენი ბინა m²-ის ახალ უბანში - m³ საბურთალო.",
+    "flatPagesModal": "თუ თქვენ ბინას არ დაამატებთ ფავორიტებში ის ავტომატურად დაიკარგება"
   },
   "alerts": {
     "planshetColorAlert": "ამ ბინის სანახავად მიბრძადით %s სივრცეში %n პლანშეტთან"
