--- a/locales/en.json
+++ b/locales/en.json
@@ -129,7 +129,8 @@
     "YouCanSelectMultipe": "You can select multiple",
     "YourChosenFlat": "Your chosen flat",
     "FlatPagesTitle": "Choose your desire %s",
-    "appliancesPageSubtitle": "Select by same color"
+    "appliancesPageSubtitle": "Select by same color",
+    "flatPagesModal": "Do you want to save this apartment?"
   },
   "addresses": {
     "marshal_gelovani": "Marshal Gelovani Avenue",
@@ -148,7 +149,8 @@
   },
   "descriptions": {
     "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo.",
-    "ModelMainIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo."
+    "ModelMainIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo.",
+    "flatPagesModal": "If you don't add your apartment it will automatically be lost"
   },
   "alerts": {
     "planshetColorAlert": "To light up this flat please proceed to %s area"
