changed some stuff in sidebar

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -154,6 +154,7 @@
   "titles": {
     "FlatPageTitleGinger": "რემონტი ჯინჯერი",
     "IAmLookingFor": "მე ვეძებ ბინას",
+    "FavouriteFlats": "შერჩეული ბინები",
     "PleaseSelectBlockFromRender": "გთხოვთ აირჩიოთ სასურველი ბლოკი",
     "ChooseBedroomCount": "აირჩიეთ საძინებლების რაოდენობა",
     "ChooseFlatType": "აირჩიეთ ბინის ტიპი",
