fixed inline filters price filter

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -67,7 +67,7 @@
     "register": "რეგისტრაცია",
     "see": "ნახე",
     "skip": "გამოტოვება",
-    "ConfirmPhone": "რეგისტრაცია",
+    "ConfirmPhone": "ავტორიზაცია",
     "search": "ძებნა"
   },
   "labels": {
