--- a/locales/en.json
+++ b/locales/en.json
@@ -23,7 +23,13 @@
     "block": "Block",
     "price": "Price",
     "floor": "Floor",
-    "view": "View"
+    "view": "View",
+    "floorPlan": "Floor Plan",
+    "IAmLookingFor": "Looking For",
+    "bedrooms": "Bedrooms",
+    "project": "Project",
+    "projects": "projects",
+    "BuildingStatus": "Status"
   },
   "sidebar": {
     "logo_meta": "m² Some text"
@@ -31,6 +37,7 @@
   "buttons": {
     "next": "NEXT",
     "see": "SEE",
+    "Sales": "SALES",
     "GetCode": "Get Code",
     "authorize": "Authorize",
     "search": "SEARCH",
@@ -38,7 +45,9 @@
     "register": "register",
     "skip": "skip",
     "faq": "Frequently asked question",
-    "CLOSE": "CLOSE"
+    "CLOSE": "CLOSE",
+    "select": "select",
+    "ConfirmPhone": "login"
   },
   "labels": {
     "FullArea": "Full Area",
@@ -107,12 +116,26 @@
     "ByFlatNumber": "Search by flat number",
     "ByFilter": "Search by filter",
     "callSaleManager": "Call the sales manager and book this flat",
-    "saveFlat": "Save this flat"
+    "saveFlat": "Save this flat",
+    "sold": "sold",
+    "available": "available",
+    "reserved": "reserved",
+    "YouCalledForSales": "You have called for sales",
+    "YouAreNumber": "You are number %s",
+    "ApproximateWaitingTime": "Estimated waiting time %s minutes",
+    "DetailsAsPdf": "Details as PDF",
+    "CancelSalesRequest": "Cancel Sales Call",
+    "WaitForSalesOrRequestInfo": "Call for sales or ask for details on email",
+    "flat_count_chosen_by_you": "Number of your chosen flats",
+    "entrance": "entrance",
+    "projects": "projects"
   },
   "titles": {
     "FlatPageTitleGinger": "Design ginger",
     "FlatPageTitleCinnamon": "Design cinnamon",
     "FillInPhoneNumber": "Fill in phone number",
+    "IAmLookingFor": "I Am Looking For",
+    "YouCanSelectOnlyOne": "You can select only one",
     "FillInPhoneNumberSubTitle": "Fill in phone number with already registered phone",
     "FlatPageTitleMuscat": "Design muscat",
     "FlatPageTitleVanilla": "Design vanilla",
@@ -130,7 +153,19 @@
     "YourChosenFlat": "Your chosen flat",
     "FlatPagesTitle": "Choose your desire %s",
     "appliancesPageSubtitle": "Select by same color",
-    "flatPagesModal": "Do you want to save this apartment?"
+    "flatPagesModal": "Do you want to save this apartment?",
+    "FavouriteFlats": "Favourite Flats",
+    "PleaseSelectBlockFromRender": "Please select block",
+    "ChooseBedroomCount": "Select bedroom count",
+    "ChooseFlatType": "Choose flat type",
+    "SearchResults": "Search Results",
+    "ChooseSearchOption": "Search Options",
+    "FlatCardSubTitle": "Flat area %sm²",
+    "BuildingProgress": "Building status",
+    "PickFloorRange": "Pick floor range",
+    "PickPriceRange": "Pick price range",
+    "ChooseProject": "Choose project",
+    "ChooseProjects": "Choose projects"
   },
   "addresses": {
     "marshal_gelovani": "Marshal Gelovani Avenue",
@@ -145,7 +180,14 @@
     "kitchen": "Kitchen",
     "bathroom": "Bathroom",
     "balcony": "Balcony",
-    "wc": "Bathroom"
+    "wc": "Bathroom",
+    "Studio": "Studio",
+    "KitchenDetached": "Separate Kitchen",
+    "NoBedroom": "No Bedroom",
+    "OneBedroom": "One Bedroom",
+    "TwoBedrooms": "Two Bedroom",
+    "ThreeBedrooms": "Three Bedroom",
+    "FourBedrooms": "Four Bedroom"
   },
   "descriptions": {
     "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo.",
@@ -162,6 +204,13 @@
     "green": "green",
     "red": "red",
     "yellow": "yellow",
-    "pink": "pink"
+    "pink": "pink",
+    "first": "first",
+    "second": "second",
+    "third": "third",
+    "fourth": "fourth",
+    "fifth": "fifth",
+    "sixth": "sixth",
+    "seventh": "seventh"
   }
 }
