--- a/locales/en.json
+++ b/locales/en.json
@@ -38,11 +38,14 @@
     "register": "register",
     "skip": "skip",
     "faq": "Frequently asked question",
-    "CLOSE": "CLOSE"
+    "CLOSE": "CLOSE",
+    "callSalesManager": "Call the sales",
+    "reservationRequest": "Request a reservation"
   },
   "labels": {
     "FullArea": "Full Area",
     "FlatArea": "Flat Area",
+    "DetailsAsPdf": "Details as PDF",
     "address": "Address",
     "name": "Full Name",
     "phone": "Phone Number",
@@ -107,7 +110,8 @@
     "ByFlatNumber": "Search by flat number",
     "ByFilter": "Search by filter",
     "callSaleManager": "Call the sales manager and book this flat",
-    "saveFlat": "Save this flat"
+    "saveFlat": "Save this flat",
+    "chosenAppliances": "Chosen appliances"
   },
   "titles": {
     "FlatPageTitleGinger": "Design ginger",
