--- a/locales/en.json
+++ b/locales/en.json
@@ -13,7 +13,8 @@
     "PhoneFieldIsRequired": "Phone Number field is required and must be numeric value",
     "emailIsNotValid": "Email field is required and must be correct format",
     "CodeFieldIsRequired": "Code field is required",
-    "NoSuchUserWithSelectedPhoneNumber": "No such user with selected phone number"
+    "NoSuchUserWithSelectedPhoneNumber": "No such user with selected phone number",
+    "InvalidCode": "Invalid code"
   },
   "navigation": {
     "flat": "Flat",
