dont save modal button

--- a/locales/en.json
+++ b/locales/en.json
@@ -123,6 +123,7 @@
     "ByFilter": "Search by filter",
     "callSaleManager": "Call the sales manager and book this flat",
     "saveFlat": "Save this flat",
+    "dontSaveFlat": "Don't save",
     "chosenAppliances": "Chosen appliances",
     "sold": "sold",
     "available": "available",
