--- a/locales/ka.json
+++ b/locales/ka.json
@@ -157,6 +157,7 @@
     "ByRender": "რენდერით ძებნა",
     "callSaleManager": "გამოიძახე გაყიდვების მენეჯერი და დაჯავშნე ეს ბინა",
     "saveFlat": "შეინახე ეს ბინა",
+    "dontSaveFlat": "არ მსურს შენახვა",
     "chosenAppliances": "შერჩეული ტექნიკა",
     "callSalesQuestion": "ნამდვილად გსურთ გაყიდვების გამოძახება?"
   },
