added sidebar to faq page

--- a/locales/en.json
+++ b/locales/en.json
@@ -150,6 +150,7 @@
   "titles": {
     "FlatPageTitleGinger": "Design ginger",
     "FlatPageTitleCinnamon": "Design cinnamon",
+    "ChooseYourSearchingMethod": "Choose your searching method",
     "FillInPhoneNumber": "Fill in phone number",
     "IAmLookingFor": "I Am Looking For",
     "YouCanSelectOnlyOne": "You can select only one",
