fixed some flats visual bugs

--- a/locales/en.json
+++ b/locales/en.json
@@ -67,6 +67,7 @@
     "FlatArea": "Flat Area",
     "address": "Address",
     "name": "Full Name",
+    "SeeAllFlatsOnThisFloor": "All flats on this floor",
     "phone": "Phone Number",
     "SendCodeAgain": "Send again",
     "email": "E-mail",
