--- a/locales/ka.json
+++ b/locales/ka.json
@@ -80,6 +80,7 @@
     "FullArea": "სრული ფართი",
     "FlatArea": "ბინის ფართი",
     "sold": "გაყიდული",
+    "SeeAllFlatsOnThisFloor": "ამ სართულზე გასაყიდი ყველა ბინა",
     "available": "დარჩენილია",
     "reserved": "შერჩეულია",
     "YouCalledForSales": "თქვენ გამოიძახეთ გაყიდვები",
