fixed some render flow bugs

--- a/locales/en.json
+++ b/locales/en.json
@@ -67,6 +67,7 @@
     "FlatArea": "Flat Area",
     "address": "Address",
     "name": "Full Name",
+    "FlatsLeftOnThisFloor": "Flats left on this floor",
     "SeeAllFlatsOnThisFloor": "All flats on this floor",
     "phone": "Phone Number",
     "SendCodeAgain": "Send again",
@@ -175,6 +176,8 @@
     "flatPagesModal": "Do you want to save this apartment?",
     "FavouriteFlats": "Favourite Flats",
     "PleaseSelectBlockFromRender": "Please select block",
+    "PleaseSelectFloorFromRender": "Please select floor",
+    "PleaseSelectFlatFromRender": "Please select flat",
     "ChooseBedroomCount": "Select bedroom count",
     "ChooseFlatType": "Choose flat type",
     "SearchResults": "Search Results",
