--- a/locales/ka.json
+++ b/locales/ka.json
@@ -80,6 +80,7 @@
     "FullArea": "სრული ფართი",
     "FlatArea": "ბინის ფართი",
     "sold": "გაყიდული",
+    "FlatsLeftOnThisFloor": "ამ სართულზე დარჩენილია",
     "SeeAllFlatsOnThisFloor": "ამ სართულზე გასაყიდი ყველა ბინა",
     "available": "დარჩენილია",
     "reserved": "შერჩეულია",
@@ -168,6 +169,8 @@
     "FavouriteFlats": "შერჩეული ბინები",
     "ChooseYourSearchingMethod": "აირჩიე სასურველი ძიების მეთოდი",
     "PleaseSelectBlockFromRender": "გთხოვთ აირჩიოთ სასურველი ბლოკი",
+    "PleaseSelectFloorFromRender": "გთხოვთ აირჩიოთ სასურველი სართული",
+    "PleaseSelectFlatFromRender": "გთხოვთ აირჩიოთ სასურველი ბინა",
     "ChooseBedroomCount": "აირჩიეთ საძინებლების რაოდენობა",
     "ChooseFlatType": "აირჩიეთ ბინის ტიპი",
     "SearchResults": "ძებნის შედეგები",
