added no flat found copy

--- a/locales/en.json
+++ b/locales/en.json
@@ -67,6 +67,7 @@
     "FlatArea": "Flat Area",
     "address": "Address",
     "name": "Full Name",
+    "NoFlatsFound": "No flats found by your chosen criteria",
     "FlatsLeftOnThisFloor": "Flats left on this floor",
     "SeeAllFlatsOnThisFloor": "All flats on this floor",
     "phone": "Phone Number",
