--- a/locales/ka.json
+++ b/locales/ka.json
@@ -80,6 +80,7 @@
     "FullArea": "სრული ფართი",
     "FlatArea": "ბინის ფართი",
     "sold": "გაყიდული",
+    "NoFlatsFound": "თქვენს მიერ მოთხოვნილი კატეგორიებით ვერცერთი ბინა ვერ მოიძებნა",
     "FlatsLeftOnThisFloor": "ამ სართულზე დარჩენილია",
     "SeeAllFlatsOnThisFloor": "ამ სართულზე გასაყიდი ყველა ბინა",
     "available": "დარჩენილია",
