Feat: Add save flat button loading animation and display response status message. Fix: Currency switcher replace function issue

--- a/locales/en.json
+++ b/locales/en.json
@@ -62,7 +62,8 @@
     "continue": "Continue",
     "cancelTheCall": "Cancel the call",
     "confirmCallSale": "Yes",
-    "awaitSale": "Wait"
+    "awaitSale": "Wait",
+    "saved": "saved"
   },
   "labels": {
     "FullArea": "Full Area",
