--- a/locales/ka.json
+++ b/locales/ka.json
@@ -76,7 +76,8 @@
     "continue": "გაგრძელება",
     "cancelTheCall": "გამოძახების გაუქმება",
     "confirmCallSale": "დიახ",
-    "awaitSale": "დაველოდები"
+    "awaitSale": "დაველოდები",
+    "saved": "შენახულია"
   },
   "labels": {
     "FullArea": "სრული ფართი",
