started working on currency switcher

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -50,8 +50,8 @@
     "home": "Home"
   },
   "home": {
-    "title": "Welcome",
-    "introduction": "This is an introduction in English."
+    "m3text": "m2 წარმოდგინეთ ახალ უბანს m3 საბურთალო - ადგილს, სადაც თითოეული კუთხე შექმნილია თავისუფალი, კომფორტული და მრავალფეროვანი ცხოვრებისთვის.",
+    "m3sub1": "შეარჩიეთ თქვენთვის სასურველი ბინა, რომელსაც მთელი უბანი მოჰყვება."
   },
   "about": {
     "title": "About",
