--- a/locales/en.json
+++ b/locales/en.json
@@ -8,6 +8,10 @@
     "ka": "ქარ",
     "en": "ENG"
   },
+  "home": {
+    "m3text": "m² წარმოდგინეთ ახალ უბანს m³ საბურთალო - ადგილს, სადაც თითოეული კუთხე შექმნილია თავისუფალი, კომფორტული და მრავალფეროვანი ცხოვრებისთვის.",
+    "m3sub1": "შეარჩიეთ თქვენთვის სასურველი ბინა, რომელსაც მთელი უბანი მოჰყვება."
+  },
   "status": {
     "finished": "Finished",
     "ongoing": "Ongoing",
@@ -219,8 +223,8 @@
     "FourBedrooms": "Four Bedroom"
   },
   "descriptions": {
-    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo.",
-    "ModelMainIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m3. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo.",
+    "ModelIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m³. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo.",
+    "ModelMainIndexPage": "In order to choose the most suitable home for you follow the navigation of our APP.<br><br>We present innovative project of m² - new district m³. Filters will simplify the process of choosing your future home.<br><br>Find your new home in the new district of m² - m³ Saburtalo.",
     "flatPagesModal": "If you don't add your apartment it will automatically be lost"
   },
   "alerts": {
