--- a/locales/en.json
+++ b/locales/en.json
@@ -19,6 +19,7 @@
   },
   "errors": {
     "NameFieldIsRequired": "Name field is required",
+    "PhoneAlreadyRegistered": "Phone number is already registered",
     "PhoneFieldIsRequired": "Phone Number field is required and must be numeric value",
     "emailIsNotValid": "Email field is required and must be correct format",
     "CodeFieldIsRequired": "Code field is required",
