--- a/locales/en.json
+++ b/locales/en.json
@@ -23,6 +23,7 @@
     "PhoneFieldIsRequired": "Phone Number field is required and must be numeric value",
     "emailIsNotValid": "Email field is required and must be correct format",
     "CodeFieldIsRequired": "Code field is required",
+    "NoItemsInYourFavourites": "No flats in your favourite list",
     "NoSuchUserWithSelectedPhoneNumber": "No such user with selected phone number",
     "InvalidCode": "Invalid code",
     "NoFlatsInThisPriceRange": "There are no flats in this price range",
