Refactor: Call sales manager modal, modal content and flat pages components. Feat: Notify user when the sales manager accepts the request

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -166,7 +166,8 @@
     "dontSaveFlat": "არ მსურს შენახვა",
     "chosenAppliances": "შერჩეული ტექნიკა",
     "callSalesQuestion": "ნამდვილად გსურთ გაყიდვების გამოძახება?",
-    "saleIsBusy": "თქვენი გაყიდვების მენეჯერი დაკავებულია. გსურთ სხვა მენეჯერის გამოძახება?"
+    "saleIsBusy": "თქვენი გაყიდვების მენეჯერი დაკავებულია. გსურთ სხვა მენეჯერის გამოძახება?",
+    "acceptedCall": "გაყიდვების მენეჯერი მალე გაგესაუბრებათ"
   },
   "titles": {
     "FlatPageTitleGinger": "რემონტი ჯინჯერი",
