--- a/locales/ka.json
+++ b/locales/ka.json
@@ -85,6 +85,7 @@
     "FullArea": "სრული ფართი",
     "FlatArea": "ბინის ფართი",
     "sold": "გაყიდული",
+    "IsSold": "გაყიდულია",
     "NoFlatsFound": "თქვენს მიერ მოთხოვნილი კატეგორიებით ვერცერთი ბინა ვერ მოიძებნა",
     "FlatsLeftOnThisFloor": "ამ სართულზე დარჩენილია",
     "SeeAllFlatsOnThisFloor": "ამ სართულზე გასაყიდი ყველა ბინა",
