--- a/locales/ka.json
+++ b/locales/ka.json
@@ -185,13 +185,13 @@
     "ChooseBedroomCount": "აირჩიეთ საძინებლების რაოდენობა",
     "ChooseFlatType": "აირჩიეთ ბინის ტიპი",
     "SearchResults": "ძებნის შედეგები",
-    "ChooseSearchOption": "არიჩიეთ ძებნის მეთოდი",
+    "ChooseSearchOption": "აირჩიეთ ძებნის მეთოდი",
     "FlatPageTitleCinnamon": "რემონტი დარიჩინი",
     "FlatCardSubTitle": "ბინის საერთო ფართი %s² მეტრი",
     "FillInPhoneNumber": "მიუთითე ტელეფონის ნომერი",
     "BuildingProgress": "მშენებლობის სტატუსი",
-    "PickFloorRange": "არიჩიეთ სართულების დიაპაზონი",
-    "PickPriceRange": "არიჩიეთ ფასების დიაპაზონი",
+    "PickFloorRange": "აირჩიეთ სართულების დიაპაზონი",
+    "PickPriceRange": "აირჩიეთ ფასების დიაპაზონი",
     "FillInPhoneNumberSubTitle": "მიუთითე ნომერი, რომელიც უკვე რეგისტრირებულია",
     "FlatPageTitleMuscat": "რემონტი მუსკატი",
     "YouWillRecieveCode": "კოდს მიიღებთ ტელეფონის ნომერზე",
