--- a/locales/ka.json
+++ b/locales/ka.json
@@ -26,7 +26,8 @@
     "emailIsNotValid": "გთხოვთ შეავსოთ ნომრის/ელ-ფოსტის ველი სწორი ფორმატით",
     "CodeFieldIsRequired": "კოდის ველი აუცილებელია და უნდა იყოს სწორი ფორმატით",
     "NoSuchUserWithSelectedPhoneNumber": "ასეთი ტელეფონის ნომრით მომხარებელი არ მოიძებნა",
-    "InvalidCode": "კოდი არასწორია"
+    "InvalidCode": "კოდი არასწორია",
+    "unauthorized": "თქვენ არ გაქვთ მოთხოვნილ რესურსზე წვდომა"
   },
   "messages": {
     "savedFlat": "თქვენს მიერ შერჩეული ბინა წარმატებით შეინახა",
