--- a/locales/ka.json
+++ b/locales/ka.json
@@ -219,6 +219,14 @@
     "appliancesPageSubtitle": "მონიშნე სასურველი ერთი ფერი",
     "flatPagesModal": "გსურთ ამ ბინის შენახვა?"
   },
+  "modal": {
+    "end_session_prompt": "დარწმუნებული ხართ, რომ გსურთ სესიის დასრულება ?",
+    "are_you_sure_question": "დარწმუნებული ხართ, რომ გსურთ შემდეგი ოპერაციის შესრულება ?",
+    "continue": "გაგრძელება",
+    "cancel": "გაუქმება",
+    "yes": "დიახ",
+    "no": "არა"
+  },
   "rooms": {
     "Hall": "ჰოლი",
     "Bedroom": "საძინებელი",
