started working on sort

--- a/locales/en.json
+++ b/locales/en.json
@@ -91,6 +91,9 @@
     "address": "Address",
     "name": "Full Name",
     "IsSold": "Sold",
+    "asc": "min-max",
+    "desc": "max-min",
+    "sort": "sort",
     "NoFlatsFound": "No flats found by your chosen criteria",
     "FlatsLeftOnThisFloor": "Flats left on this floor",
     "SeeAllFlatsOnThisFloor": "All flats on this floor",
