--- a/locales/ka.json
+++ b/locales/ka.json
@@ -89,7 +89,10 @@
   "labels": {
     "FullArea": "სრული ფართი",
     "FlatArea": "ბინის ფართი",
+    "sort": "სორტირება",
     "sold": "გაყიდული",
+    "asc": "მინ-მაქს",
+    "desc": "მაქს-მინ",
     "IsSold": "გაყიდულია",
     "NoFlatsFound": "თქვენს მიერ მოთხოვნილი კატეგორიებით ვერცერთი ბინა ვერ მოიძებნა",
     "FlatsLeftOnThisFloor": "ამ სართულზე დარჩენილია",
