--- a/locales/ka.json
+++ b/locales/ka.json
@@ -228,7 +228,9 @@
     "continue": "გაგრძელება",
     "cancel": "გაუქმება",
     "yes": "დიახ",
-    "no": "არა"
+    "no": "არა",
+    "please_confirm_email": "გთხოვთ დაადასტუროთ ელ-ფოსტა",
+    "send": "გაგზავნა"
   },
   "rooms": {
     "Hall": "ჰოლი",
