--- a/locales/en.json
+++ b/locales/en.json
@@ -184,6 +184,7 @@
   "titles": {
     "FlatPageTitleGinger": "Design ginger",
     "FlatPageTitleCinnamon": "Design cinnamon",
+    "not_already_registered": "If not already registered",
     "ChooseYourSearchingMethod": "Choose your searching method",
     "FillInPhoneNumber": "Fill in phone number",
     "IAmLookingFor": "I Am Looking For",
