--- a/locales/ka.json
+++ b/locales/ka.json
@@ -231,7 +231,9 @@
     "yes": "დიახ",
     "no": "არა",
     "please_confirm_email": "გთხოვთ დაადასტუროთ ელ-ფოსტა",
-    "send": "გაგზავნა"
+    "send": "გაგზავნა",
+    "successfulReservation": "თქვენ მიერ შერჩეული ბინა დაიჯავშნა",
+    "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა"
   },
   "rooms": {
     "Hall": "ჰოლი",
