--- a/locales/ka.json
+++ b/locales/ka.json
@@ -57,8 +57,8 @@
     "home": "Home"
   },
   "home": {
-    "m3text": "m2 წარმოდგინეთ ახალ უბანს m3 საბურთალო - ადგილს, სადაც თითოეული კუთხე შექმნილია თავისუფალი, კომფორტული და მრავალფეროვანი ცხოვრებისთვის.",
-    "m3sub1": "შეარჩიეთ თქვენთვის სასურველი ბინა, რომელსაც მთელი უბანი მოჰყვება."
+    "m3text": "m2 წარმოდგინეთ ახალ უბანს m3 საბურთალო - ადგილს, სადაც თითოეული კუთხე შექმნილია თავისუფალი, კომფორტული და მრავალფეროვანი ცხოვრებისთვის",
+    "m3sub1": "შეარჩიეთ თქვენთვის სასურველი ბინა, რომელსაც მთელი უბანი მოჰყვება"
   },
   "about": {
     "title": "About",
@@ -104,7 +104,7 @@
     "ApproximateWaitingTime": "სავარაუდო ლოდინის დრო %s წუთი",
     "DetailsAsPdf": "დეტალები PDF ვერსიად",
     "CancelSalesRequest": "გაყიდვების გაუქმება",
-    "WaitForSalesOrRequestInfo": "დაელოდეთ სეილებს ან მოითხოვე დეტალები მეილზე",
+    "WaitForSalesOrRequestInfo": "დაელოდეთ გაყიდვების მენეჯერებს ან მოითხოვე დეტალები მეილზე",
     "name": "სახელი და გვარი",
     "phone": "ტელეფონის ნომერი",
     "SendCodeAgain": "ახლიდან გაგზავნა",
@@ -171,14 +171,19 @@
     "ByPhoneNumber": "ავტორიზაცია ტელეფონის ნომრით",
     "ByFlatNumber": "ბინის ნომრით ძებნა",
     "ByFilter": "ფილტრით ძებნა",
-    "ByRender": "რენდერით ძებნა",
+    "ByRender": "პროექტით ძებნა",
     "callSaleManager": "გამოიძახე გაყიდვების მენეჯერი და დაჯავშნე ეს ბინა",
     "saveFlat": "შეინახე ეს ბინა",
     "dontSaveFlat": "არ მსურს შენახვა",
     "chosenAppliances": "შერჩეული ტექნიკა",
     "callSalesQuestion": "ნამდვილად გსურთ გაყიდვების გამოძახება?",
     "saleIsBusy": "თქვენი გაყიდვების მენეჯერი დაკავებულია. გსურთ სხვა მენეჯერის გამოძახება?",
-    "acceptedCall": "გაყიდვების მენეჯერი მალე გაგესაუბრებათ"
+    "acceptedCall": "გაყიდვების მენეჯერი მალე გაგესაუბრებათ",
+    "forRent": "გასაქირავებლად",
+    "forMyBigFamily": "ჩემი დიდი ოჯახისთვის",
+    "forYoungFamily": "ახალგაზრდა ოჯახისთვის",
+    "forCouple": "წყვილისთვის",
+    "forAlone": "მარტო ერთისთვის"
   },
   "titles": {
     "FlatPageTitleGinger": "რემონტი ჯინჯერი",
@@ -220,7 +225,7 @@
     "FrequentlyAskedQuestions": "ხშირად დასმული კითხვები",
     "ModelIndexPage": "ბინის შერჩევა იწყება აქ!",
     "FlatPagesTitle": "აირჩიე შენთვის სასურველი %s",
-    "appliancesPageSubtitle": "მონიშნე სასურველი ერთი ფერი",
+    "appliancesPageSubtitle": "აირჩიეთ სასურველი ტექნიკა",
     "flatPagesModal": "გსურთ ამ ბინის შენახვა?"
   },
   "modal": {
