Feat: For who modal

--- a/locales/ka.json
+++ b/locales/ka.json
@@ -238,7 +238,10 @@
     "please_confirm_email": "გთხოვთ დაადასტუროთ ელ-ფოსტა",
     "send": "გაგზავნა",
     "successfulReservation": "თქვენ მიერ შერჩეული ბინა დაიჯავშნა",
-    "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა"
+    "failedReservation": "თქვენ მიერ შერჩეული ბინის დაჯავშნა ვერ მოხერხდა",
+    "aboutFilterTitle": "ფილტრების შესახებ",
+    "aboutFilterDesc": "აღნიშნული ფილტრის მონიშვნით, ჩვენ წინასწარ შემოგთავაზებთ რეკომენდებულ ფილტრებს, რომლის ცვლილება თქვენც შეგიძლიათ",
+    "ok": "გასაგებია"
   },
   "rooms": {
     "Hall": "ჰოლი",
