--- a/locales/en.json
+++ b/locales/en.json
@@ -40,7 +40,10 @@
     "please_confirm_email": "Please confirm e-mail",
     "send": "Send",
     "successfulReservation": "Your chosen flat is already booked",
-    "failedReservation": "Your chosen flat couldn't be booked"
+    "failedReservation": "Your chosen flat couldn't be booked",
+    "aboutFilterTitle": "About filters",
+    "aboutFilterDesc": "By selecting this filter, we will offer you the recommended pre-filters, which you can change",
+    "ok": "OK"
   },
   "messages": {
     "savedFlat": "Your chosen flats is saved successfully",
